comunicando el main con nos

--- a/html/main.html
+++ b/html/main.html
@@ -29,7 +29,7 @@
                     <li><a href="#home">Inicio</a></li>
                     <li><a href="#services">Servicios</a></li>
                     <li><a href="#products">Productos</a></li>
-                    <li><a href="#contact">Conocenos</a></li>
+                    <li><a href="../Nosotros-master">Conocenos</a></li>
                 </ul>
             </nav>
             <div>
